Data list : fix column selector position : align left

--- a/saf/framework/skins/default/list.scss
+++ b/saf/framework/skins/default/list.scss
@@ -63,6 +63,10 @@
 						font-size: 1px;
 						height: 17px;
 					}
+					>section.popup {
+						left: 0;
+						position: absolute;
+					}
 				}
 
 				/* head anchor */
