--- a/saf/framework/skins/default/property.scss
+++ b/saf/framework/skins/default/property.scss
@@ -17,7 +17,7 @@
 		left: 1px;
 		position: absolute;
 		top: -1px;
-		width: 16px;
+		width: 22px;
 	}
 
 	>input {
